--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@layer base {
+    .sidebar {
+        @apply bg-primary h-[100%] w-[13rem] rounded-l-xl p-2
+        border transition-all duration-500 relative 
+    }
+    .sideData {
+        @apply flex p-3 text-white items-center  my-3 rounded-xl cursor-pointer hover:text-black hover:bg-white transition-all duration-200 
+
+    }
 }
